apps/static-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static-web
  sessionAffinity: None
  type: ClusterIP
